put&get basic catch e