@@ -12,9 +12,11 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 public class Download {
     private final String hashTableFilePath;
@@ -37,18 +39,18 @@ public class Download {
         }
         // 哈希表文件需要文件原本的后缀
         this.hashTableFilePath = fileName + ".ser";
-        getHashTable();
-        getPort();
-        getChunkCount();
+
         // 下载存入文件夹的路径
         basePath = "files_download";
     }
+
+    // 读取本地哈希表记录找到对应文件块对应的服务器
     private void getHashTable() {
         try (ObjectInputStream objectInputStream = new ObjectInputStream(
                 Files.newInputStream(Path.of(hashTableFilePath), StandardOpenOption.READ)
         )) {
             hash = (HashMap<Integer, List<Integer>>) objectInputStream.readObject();
-            System.out.println("successfully read hashtable: " + hash);
+//            System.out.println("successfully read hashtable: " + hash);
         } catch (IOException e) {
             throw new RuntimeException(e);
         } catch (ClassNotFoundException e) {
@@ -56,17 +58,21 @@ public class Download {
         }
     }
 
+    // 获得端口信息
     private void getPort() {
-        for (Integer key: hash.keySet()) {
-            serverPort.add(key);
-        }
-    }
-    private void getChunkCount() {
-        for (List<Integer> val: hash.values()) {
-            chunkCount += val.size();
-        }
+        serverPort.addAll(hash.keySet());
     }
 
+    // 获得文件块数
+    private void getChunkCount() {
+        chunkCount = hash
+                .values()
+                .stream()
+                .mapToInt(List::size)
+                .sum();
+    }
+
+    // 合并文件块
     private void mergeFile() {
         Path targetFilePath = Paths.get(basePath, fileName + "." + fileExt);
         Path parentDir = targetFilePath.getParent();
@@ -79,7 +85,8 @@ public class Download {
         }
         try (FileChannel fileChannel = FileChannel.open(targetFilePath, StandardOpenOption.CREATE, StandardOpenOption.WRITE, StandardOpenOption.TRUNCATE_EXISTING)) {
             for (int i = 0; i < chunkCount; ++i) {
-                try (FileChannel chunkFileChannel = FileChannel.open(Path.of(fileName + i + "." + fileExt), StandardOpenOption.READ)) {
+                Path chunkFilePath = Paths.get(basePath, fileName + i + "." + fileExt);
+                try (FileChannel chunkFileChannel = FileChannel.open(chunkFilePath, StandardOpenOption.READ)) {
                     fileChannel.position(fileChannel.size());
                     chunkFileChannel.transferTo(0, chunkFileChannel.size(), fileChannel);
                 }
@@ -89,69 +96,105 @@ public class Download {
         }
     }
 
+    // 发送文件块名字并接收文件块
     private void getChunk() {
-        Socket[] sockets = new Socket[serverPort.size()];
-        try {
-            // 发送要下载的文件名
-            for (int i = 0; i < sockets.length; ++i) {
-                sockets[i] = new Socket(SERVER_HOST, serverPort.get(i));
-                DataOutputStream dataOutputStream = new DataOutputStream(sockets[i].getOutputStream());
-                dataOutputStream.write(request.getBytes(StandardCharsets.UTF_8));
+        List<CompletableFuture<Void>> futures = new ArrayList<>();
 
-                // 发送给对应端口要下载的chunk文件名
-                for (Integer chunkIndex : hash.get(serverPort.get(i))) {
-                    String chunkFileName = fileName + chunkIndex + "." + fileExt;
-                    byte[] chunkFileNameBytes = chunkFileName.getBytes(StandardCharsets.UTF_8);
-                    // 发送文件名长度
-                    dataOutputStream.writeInt(chunkFileNameBytes.length);
-                    // 发送文件名
-                    dataOutputStream.write(chunkFileNameBytes);
-                    System.out.println("send file name " + chunkFileName);
-                }
-                // 关闭输出流 防止阻塞
-                sockets[i].shutdownOutput();
-            }
+        // 每个存有文件块的 发送文件名 接收文件块
+        for (int port : serverPort) {
+            CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
+                try (Socket socket = new Socket(SERVER_HOST, port);
+                     DataOutputStream dataOutputStream = new DataOutputStream(socket.getOutputStream())) {
 
-            // 接收文件
-            for (int i = 0; i < sockets.length; ++i) {
-                DataInputStream dataInputStream = new DataInputStream(sockets[i].getInputStream());
-                // 接收
-                while (true) {
-                    int fileNameLength;
-                    try {
-                        // 接收文件名长度
-                        fileNameLength = dataInputStream.readInt();
-                        System.out.println("file name length " + fileNameLength);
-                    } catch (Exception e) {
-                        // 结束接收
-                        break;
+                    // 发送请求类型
+                    dataOutputStream.write(request.getBytes(StandardCharsets.UTF_8));
+
+                    for (int chunkIndex : hash.get(port)) {
+                        String chunkFileName = fileName + chunkIndex + "." + fileExt;
+                        byte[] chunkFileNameBytes = chunkFileName.getBytes(StandardCharsets.UTF_8);
+                        dataOutputStream.writeInt(chunkFileNameBytes.length);
+                        dataOutputStream.write(chunkFileNameBytes);
+//                        System.out.println("Sent file name: " + chunkFileName);
                     }
-                    // 接收并写入文件
-                    ReceiveFile receiveFile = new ReceiveFile(dataInputStream, basePath, fileNameLength);
-                    receiveFile.receive();
-                }
-            }
-        } catch (UnknownHostException e) {
-            e.printStackTrace();
-        } catch (IOException e) {
-            e.printStackTrace();
-        } finally {
-            // 关闭连接
-            for (int i = 0; i < sockets.length; ++i) {
-                if (sockets[i] != null && !sockets[i].isClosed()) {
-                    try {
-                        sockets[i].close();
-                    } catch (IOException e) {
-                        throw new RuntimeException(e);
+
+                    // 关闭输出流 避免服务器阻塞
+                    socket.shutdownOutput();
+
+                    DataInputStream dataInputStream = new DataInputStream(socket.getInputStream());
+                    while (true) {
+                        int fileNameLength;
+                        try {
+                            fileNameLength = dataInputStream.readInt();
+//                            System.out.println("File name length: " + fileNameLength);
+                        } catch (EOFException e) {
+                            // 结束接收
+                            break;
+                        }
+                        // 接收文件内容
+                        ReceiveFile receiveFile = new ReceiveFile(dataInputStream, basePath, fileNameLength);
+                        receiveFile.receive();
                     }
+                } catch (IOException e) {
+                    // 处理异常
+                    throw new RuntimeException("Failed to receive chunk file.", e);
                 }
-            }
+            });
+
+            futures.add(future);
         }
+
+        // 等待所有任务完成
+        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
+    }
+    // 删除文件块
+    private void deleteChunkFile() {
+        // 循环读取块的过程放入一个线程池中
+        ExecutorService executorService = Executors.newFixedThreadPool(chunkCount);
+        List<CompletableFuture<Void>> futures = new ArrayList<>();
+
+        for (int i = 0; i < chunkCount; ++i) {
+            int chunkIndex = i;
+            // 封装为异步任务交给线程池处理
+            CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
+                // 删除临时chunk文件
+                Path chunkFilePath = Paths.get(basePath, fileName + chunkIndex + "." + fileExt);
+                if (Files.exists(chunkFilePath)) {
+                    try {
+                        Files.delete(chunkFilePath);
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                    }
+                }
+            }, executorService);
+            futures.add(future);
+        }
+        // 等待所有任务完成关闭线程池
+        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
+        executorService.shutdown();
+    }
+
+    public static void downloadFile(String fileName) {
+        Download download = new Download(fileName);
+        try {
+            download.getHashTable();
+            download.getPort();
+            download.getChunkCount();
+            download.getChunk();
+            download.mergeFile();
+            download.deleteChunkFile();
+        } catch (Exception e) {
+            System.out.println("没有这个文件~");
+        }
+
     }
 
     public static void main(String[] args) {
         Download download = new Download("test.pdf");
+        download.getHashTable();
+        download.getPort();
+        download.getChunkCount();
         download.getChunk();
         download.mergeFile();
+        download.deleteChunkFile();
     }
 }
